# data-reduction

./: .env.example  .gitignore  README.md  alma-retrieve-wrapper.sh  exec_cal_scripts.sh  pyproject.toml
panta_rei/: __init__.py  auth.py  config.py
panta_rei/alma/: client.py  download.py  metadata.py  staging.py
panta_rei/analysis/: __init__.py  clean_diagnostics.py  clean_diagnostics_plots.py  moments.py  plots.py  tp_lookup.py
panta_rei/casa/: contsub_remediation.py  feather_sm_tp.py  tclean_feather.py
panta_rei/cli/: migrate_db.py  reset_mous.py  run_calibration.py  run_clean_diagnostics.py  run_contsub.py  run_imaging.py  run_imaging_dispatch.py  run_moments.py  run_pipeline.py
panta_rei/core/: errors.py  logging.py  retry.py  tar.py  text.py  uid.py
panta_rei/data/: linelist.csv
panta_rei/db/: connection.py  models.py  schema.py
panta_rei/github/: issues.py  project.py
panta_rei/imaging/: __init__.py  dispatch.py  matching.py  recovery.py  remote_worker.py  runner.py  staging.py  unit_selection.py
tables/: Pantarei_Sample_cycle12.csv  target_obs_ids.csv
tests/: conftest.py  test_auth.py  test_calibration.py  test_clean_diagnostics.py  test_config.py  test_contsub.py  test_db.py  test_db_bootstrap.py  test_dispatch.py  test_imaging_db.py  test_imaging_workflow.py  test_issues.py  test_matching.py  test_metadata.py  test_moments.py  test_recovery.py  test_remote_worker.py  test_retrieve.py  test_runner.py  test_stage_weblogs.py  test_staging.py  test_tar.py  test_text.py  test_uid.py  test_unit_selection.py  test_workflow.py
(+5 files in other folders)
